# OpenGaussianSplatting

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
apps/: train_3d.py
opengs/: __init__.py
opengs/data/: __init__.py  colmap.py  synthetic.py
opengs/losses/: __init__.py  image_loss.py
opengs/models/: __init__.py  vanilla_gs.py
opengs/optimizers/: __init__.py  densifier.py
opengs/renderers/: __init__.py  gsplat_renderer.py
opengs/utils/: __init__.py  auto_config.py  ply_parser.py
requirements/: base.txt  linux.txt  windows.txt
